--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,7 +88,7 @@
     flex: 1;
     margin: auto;
     display: flex;  
-    align-items: end;
+    align-items: flex-end;
     height: 100%;
   }
 
